# WS23-FPROG-war-and-peace

./: .gitignore  CMakeLists.txt  README.md  conandata.yml  main.cpp  makefile  presentation.pptx  readFile.cpp  run.sh
src/: chapterizer.h  counter.h  density_metrics.h  filter.h  main.cpp  print.h  process.h  readAndTokenize.h  readFile.h  tokenize.hpp  tokenizer.h  tokenizer.hpp  validator.h
tests/: CMakeLists.txt  counter_test.cpp  density_metrics_test.cpp  filter_test.cpp  process_test.cpp  tokenize_test.cpp  tokenizer_test.cpp  validator_test.cpp
